app-test/testdata/typesystem/neg/algebraic-type-duplicate-variant/check/adt.check
testdata/typesystem/neg/algebraic-type-duplicate-variant/src/adt.cal:2:18: error: A is already declared in this scope.
    type T : A | A(int a, bool b) end // error
                 ^^^^^^^^^^^^^^^^